<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>



        <ImageView
            android:id="@+id/arrow"
            android:src="@drawable/arrow2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />


    <!--<ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/imgClose"
        android:visibility="gone"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:padding="20dp"/>-->
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_image_view"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/camera_animation"
            />
        <Button
            android:id="@+id/btnStart"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textColor="@color/colorDarkGray"
            android:background="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_recognized_geopoint" />

    </RelativeLayout>


</FrameLayout>
