<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/recommendation_dialog">

    <LinearLayout
        android:id="@+id/fofi"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
...
            android:layout_gravity="bottom"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:background="@null" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/exit"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_below="@id/pager"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
...
