<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/layoutcarousel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:weightSum="1">

            <TextView
                android:id="@+id/introText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:paddingTop="40dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryWhite"
                android:textAlignment="gravity"
                android:text="intro"
                android:gravity="left"
                android:scrollbars="vertical"
                android:layout_marginBottom="20dp"
                android:background="@color/semiTransparentBlue"
                />
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.25" >

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:textColor="@color/colorPrimaryWhite"
                    android:background="@drawable/round_button"
                    android:text="@string/btn_start"
                    />

            </LinearLayout>

            <!--android:shadowColor="@android:color/black"-->
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginRight="25dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_public_black_24dp"
        android:tint="@color/colorPrimaryWhite"
        app:layout_anchor="@id/layoutcarousel"
        app:layout_anchorGravity="bottom|right|end"/>


</android.support.design.widget.CoordinatorLayout>