<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ucr.fofis.geoapp.MapActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/layoutMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <org.osmdroid.views.MapView
                android:id="@+id/mMapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/layoutBack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>


    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:id="@+id/fab_speed_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabGravity="bottom_end"
        app:touchGuard="false"
        app:fabMenu="@menu/speed_dial_button"
        app:fabBackgroundTint="@color/colorPrimaryDark"
        app:miniFabDrawableTint="@color/colorPrimaryDark"
        app:miniFabTitleTextColor="@color/colorPrimaryDark" />

    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:id="@+id/fab_speed_dial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabGravity="bottom_end"
        app:touchGuard="false"
        app:fabMenu="@menu/speed_dial_button2"
        app:fabBackgroundTint="@color/colorPrimaryDark"
        app:miniFabDrawableTint="@color/colorPrimary"
        app:miniFabTitleTextColor="@color/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>
